Fix always shown scrollbar to appear only when content of modal is too tall

--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -23,7 +23,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
   }
 
